kubernetes/apps/multimedia/qbittorrent/app/backendtrafficpolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: qbittorrent-buffer
  namespace: multimedia
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: qbittorrent
  connection:
    bufferLimit: "64Ki"
