kubernetes/apps/multimedia/qbittorrent/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: multimedia
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
      sectionName: https
  hostnames:
    - torrent.${DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qbittorrent
          port: 8080
