kubernetes/apps/multimedia/qbittorrent/app/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: qbittorrent-oauth2
  namespace: multimedia
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: qbittorrent
  extAuth:
    http:
      backendRef:
        name: oauth2-proxy
        namespace: auth
        port: 4180
      headersToBackend:
        - Cookie
        - Authorization
      headersToDownstream:
        - X-Auth-Request-User
        - X-Auth-Request-Email
        - Authorization
